--- a/src/app/components/products/physical/product-list/product-list.component.html
+++ b/src/app/components/products/physical/product-list/product-list.component.html
@@ -44,7 +44,7 @@
       <div class="p-0 m-0 col-2">
         <button
           class="align-items-center btn btn-light d-flex justify-content-center row"
-          (click)="Delete(item)"
+          (click)="openModal(item)"
         >
           <i class="icon-pencil-alt ml-1 p-1"></i>
           <label class="m-0 mr-4 u-smallerSize"> editar</label>
