--- a/src/app/components/sales/orders/orders.component.html
+++ b/src/app/components/sales/orders/orders.component.html
@@ -64,7 +64,7 @@
         </button>
       </div>
 
-      <div class="p-0 m-2 col">
+      <!-- <div class="p-0 m-2 col">
         <span
           class="btn btn-light d-flex justify-content-center align-items-center flex-row"
           (click)="complete(item, 'Enviado')"
@@ -72,9 +72,9 @@
           <i class="fa fa-list-alt u-smallSize m-2"> </i>
           <label class="m-0 ml-3 u-smallerSize"> Enviado</label>
         </span>
-      </div>
+      </div> -->
 
-      <div class="p-0 m-2 col">
+      <!-- <div class="p-0 m-2 col">
         <span
           class="btn btn-light d-flex justify-content-center align-items-center flex-row"
           (click)="complete(item, 'Completado')"
@@ -82,7 +82,7 @@
           <i class="fa fa-list-alt u-smallSize m-2"> </i>
           <label class="m-0 ml-3 u-smallerSize"> Completado</label>
         </span>
-      </div>
+      </div> -->
     </article>
   </section>
 </div>
