--- a/src/app/components/users/list-user/list-user.component.html
+++ b/src/app/components/users/list-user/list-user.component.html
@@ -66,6 +66,15 @@
           <label class="m-0 mr-4 u-smallerSize"> Desactivar</label>
         </button>
       </div>
+      <div class="p-0 m-2 col">
+        <button
+          class="btn btn-light d-flex justify-content-center align-items-center flex-row"
+          (click)="openModal(item)"
+        >
+          <i class="fa fa-lock u-smallSize"></i>
+          <label class="m-0 ml-3 u-smallerSize"> Contrase&ntilde;a</label>
+        </button>
+      </div>
     </article>
   </section>
 </div>
