--- a/src/app/components/users/list-user/user-modal/user-modal.component.html
+++ b/src/app/components/users/list-user/user-modal/user-modal.component.html
@@ -22,6 +22,28 @@
       <h4>Detalles de la cuenta</h4>
       <div class="form-group col-12">
         <label for="validationCustom1" class="col-xl-3 col-md-4"
+          ><span>*</span> Nombre del gerente
+        </label>
+        <input
+          class="form-control col-xl-8 col-md-7"
+          id="validationCustom1"
+          type="text"
+          formControlName="nameUser"
+        />
+      </div>
+      <div class="form-group col-12">
+        <label for="validationCustom1" class="col-xl-3 col-md-4"
+          ><span>*</span> Apellido del gerente
+        </label>
+        <input
+          class="form-control col-xl-8 col-md-7"
+          id="validationCustom1"
+          type="text"
+          formControlName="lastName"
+        />
+      </div>
+      <div class="form-group col-12">
+        <label for="validationCustom1" class="col-xl-3 col-md-4"
           ><span>*</span> Nombre de la empresa
         </label>
         <input
@@ -108,6 +130,18 @@
           formControlName="phoneGerente"
         />
       </div>
+      <div class="form-group col-12">
+        <label for="validationCustom4" class="col-xl-3 col-md-4"
+          ><span>*</span> Extension Telefono de Gerente</label
+        >
+        <input
+          class="form-control col-xl-8 col-md-7"
+          id="validationCustom4"
+          type="text"
+          formControlName="extPhoneGerente"
+        />
+      </div>
+
       <div class="form-group col-12">
         <label for="validationCustom4" class="col-xl-3 col-md-4"
           ><span>*</span> Horarios
