--- a/src/app/components/setting/profile/profile.component.html
+++ b/src/app/components/setting/profile/profile.component.html
@@ -23,7 +23,7 @@
                       <tbody>
                         <tr>
                           <td>Nombre:</td>
-                          <td>{{ data.userName }}</td>
+                          <td>{{ data.nameUser }}</td>
                         </tr>
                         <tr>
                           <td>Correo:</td>
